# interview

./: .travis.yml  CMakeLists.txt  README.md
include/: lib.h
lib/: lib.c  testhelper.c
src/: factorial_trailing_zero.c  maximum_without_if.c  str_compress.c  str_is_anagram.c  str_remove_dup.c  str_replace_space.c  str_reverse.c  str_unique.c
